kubeadm/Grafana-Alloy/Grafana/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: kong
  tls:
  - hosts:
      - grafana.machinesarehere.in
    secretName: homelab-tls
  rules:
  - host: grafana.machinesarehere.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
